2011-XX-XX
  + 2011.1 release

  * Removed SYSLINUX dependency during Linux install
  * Custom fast initramfs without modules probing
  * Separated KMS-dependent and VESA-dependent boots
  * Added option for booting without applying user setting
  * More RAM is wiped with KEXEC-based reboot/shutdown

  * Kernel 2.6.36 with PLD Linux SquashFS LZMA patches
  * Control groups assist process scheduling
  * Xorg server 1.9
  * Easy MP4[H.264+MP3] webcam video encoding
  * Easy Speex audio encoding
  * Added FBReader, XChat, Pidgin


2010-11-15
  + 2010.1 release

  * Transitioned to SYSLINUX, radically simplified installation on all platforms
  * Robust persistence using resizable encrypted virtual partition (OTFE)
  * Tor start-up does not depend on in-the-clear correct time source access
  * Tor hostname is now directly generated and propagated to Tor upon first boot
  * Provisional communication certificates generation and username derivation
  * GnuPG uses HKPS protocol (CA certificate verified during build)
  * Added an unsafe browser that bypasses the firewall (for Wi-Fi registration)
  * Added robust X server screen locking support

  * Added a robust and reasonably fast start-to-finish build script
  * Added universal verification of signatures during build (rsync is disabled)
  * Hardened build is now based on the more reliable regular stage3 autobuilds
  * Hardened GCC version with SSP and PIE support is now used to build packages
  * Removed CDROM boot support
  * Accepted licenses are explicitly specified during build

  * Updated to kernel 2.6.32, kernel+initrd use LZMA
  * Removed SquashFS LZMA support until it is available in mainline
  * Added full ACL and extended attributes support
  * AutoFS integration fixes and enhancements
  * Added support for popular Ethernet and Wi-Fi drivers (including firmware)
  * Removed the deprecated IDE support in favor of libata, added SMART monitor
  * MAC address is correctly randomized (automatic for Wi-Fi only)