@@ -34,6 +34,9 @@ dir   root        0700 0 0
 dir   sbin        0755 0 0
 file  sbin/v86d           /sbin/v86d                   0755 0 0
 
+# Custom klibc-based executables
+file  sbin/memwipe        /usr/local/sbin/memwipe      0755 0 0
+
 # Mount points
 dir   proc        0755 0 0
 dir   sys         0755 0 0
