@@ -1,7 +1,0 @@
-#include <stdio.h>
-#include <stdlib.h>
-
-int main() {
-    printf("Test\n");
-    return 0;
-}
